Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1771 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -24,7 +24,7 @@
       * [XmlScenario Scenario XML]
       * [XmlMonitoring Monitoring measures]
       * [Terminology]
-      * [Instructions for applying OpenMalaria to field sites]
+      * [How to apply OpenMalaria to field sites]
   * *[ModelsOverview Model descriptions]*
     * [ModelDemography Human demography]
     * [ModelTransmission Transmission models]
