Edited wiki page Instructions through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1775 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -4,7 +4,7 @@
 
 Individuals interested in simulating malaria in a particular location may find this a useful starting point for downloading and using OpenMalaria, building scenario files, and analyzing results.
 
-= Details =
+= How to apply OpenMalaria to field sites =
 
 A glossary of useful terms related to the OpenMalaria wiki can be found [http://code.google.com/p/openmalaria/wiki/Terminology here].
 
