--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -20,6 +20,8 @@ There are several envisaged methods of carrying out predictive simulations:
 
 The outputs from these simulations can be linked to cost data from endemic countries to analyse the economics of malaria interventions.  
 
+For first-time users, an overview of how to set up and use OpenMalaria to simulate malaria in a particular field site can be found [http://code.google.com/p/openmalaria/wiki/Instructions here]. 
+
 == Uncertainty analysis ==
 
 The project also analyzes the uncertainty associated with sets of model predictions. 
