--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -11,21 +11,19 @@ A glossary of useful terms related to the OpenMalaria wiki can be found [http://
 
 ==1.	Download OpenMalaria==
 
-The model is written in C++ with Fortran roots. In order to run the model you need to download the simulator that contains all the necessary code. As of April 2011 the current version of the OpenMalaria schema is version 26.  Check back periodically to ensure you have the most up to date version. If you are in doubt contact the OpenMalaria administrator. To run the OpenMalaria simulator you need to create an XML file that contains all the data on malaria in your study area (described in later steps).
+The model is written in C++. In order to run the model you need to download the simulator that contains all the necessary code in an executable version. This is updated from time to time.  For instance, as of April 2011 the current version of the OpenMalaria schema was version 26.  Check back periodically to ensure you have the most up to date version. If you are in doubt contact the OpenMalaria administrator. To run the OpenMalaria simulator you need to create an XML file that contains all the data on malaria in your study area (described in later steps).
 
 A description of how to download OpenMalaria for a PC can be found 
-[http://code.google.com/p/openmalaria/wiki/openmalariaTools here].  Note: OpenMalaria is not available yet for Mac users –contact the administrator if you would like to run OpenMalaria on a Mac.
-
+[http://code.google.com/p/openmalaria/wiki/openmalariaTools here].  Note: This interface to OpenMalaria is not available yet for Mac users –contact the administrator if you would like to run OpenMalaria on a Mac.
 
 ==2.	Decide on what you will be simulating==
 
-Before doing anything else, collaborate with the research team and/or control program managers in the study area (if possible) to ensure field data is available for what you want to simulate. For example, if the field study is a cohort where people are tested for malaria using RDTs, you will be simulating patent infections. If the field study is an entomological study where mosquitoes are trapped, dissected and analyzed for sporozoites, you will be simulating number of infectious mosquitoes. Try to keep the number of outputs limited to 3 or 4 maximum for ease of analysis. EIR is considered the main measure of transmission so this should ideally be one of the outputs. 
-
-It is important for this step to happen early on because you don’t want to get to the end of running simulations and find out your analysis is not relevant in the field. It will help immensely if everyone is on the same page at the beginning with what you are simulating and why.
+Before doing anything else, collaborate with the research team and/or control program managers in the study area (if possible) to ensure field data is available for what you want to simulate. For example, if the field study is a cohort where people are tested for malaria using rapid diagnostic tests (RDTs), you will be simulating patent infections. If the field study is an entomological study where mosquitoes are trapped, dissected and analyzed for sporozoites, you will be simulating number of infectious mosquitoes. 
 
 The full list of outputs OpenMalaria is able to simulate can be found 
-[http://code.google.com/p/openmalaria/wiki/XmlMonitoring here].
+[http://code.google.com/p/openmalaria/wiki/XmlMonitoring here].  Try to keep the number of outputs limited to 3 or 4 maximum for ease of analysis. The models are driven by the simulated Entomological Inoculation Rate (EIR), which is the main measure of transmission so this should ideally be one of the outputs if you are interested in simulating the effects of interventions on transmission. 
 
+It is important for this step to happen early on because you don’t want to get to the end of running simulations and find out your analysis is not relevant in the field. It will help immensely if everyone is on the same page at the beginning with what you are simulating and why.
 
 ==3.	Choose model(s)==
 
@@ -102,9 +100,11 @@ By running simulations with multiple seed values you are addressing stochasticit
 To explore the effects of different interventions, take your “best fit” model and update the scenario file to simulate different coverage levels, timing, and target age groups. Set the scenario to run for an extended period time over the whole population of the study area to see the impact. 
 
 
-==10.	Send to BOINC==
+==10.	Submit your experiment to grid computing resource==
 
-Once you are satisfied that the syntax in your scenario file is working and you are ready to run the simulations with all seed values and parameterizations in the chosen population, send the scenario files in .xml format to the Biostatistics and Computational Sciences Unit at Swiss TPH. They will ensure the scenario file is in order and then send the scenarios to the volunteer computer network. Because you have gone through the setup and analysis exercises on a smaller population this part should run more smoothly.
+Once you are satisfied that the syntax in your scenario files is working and you are ready to run the simulations with all seed values and parameterizations in the chosen population, you may conclude that your simulations will take too long on your own computer.
+
+Collaborators of the OpenMalaria development team can send the scenario files in .xml format to the project staff who will ensure the scenario file is in order and then submit them to an appropriate computing resource. If you have gone through the setup and analysis exercises on  smaller simulated populations this part should run smoothly.
 
 
 ==References==
