--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -1,26 +1,26 @@
-#summary How to apply OpenMalaria to field sites.
+#summary How to apply !OpenMalaria to field sites.
 
 = Introduction =
 
-Individuals interested in simulating malaria in a particular location may find this a useful starting point for downloading and using OpenMalaria, building scenario files, and analyzing results.
+Individuals interested in simulating malaria in a particular location may find this a useful starting point for downloading and using !OpenMalaria, building scenario files, and analyzing results.
 
-= How to apply OpenMalaria to field sites =
+= How to apply !OpenMalaria to field sites =
 
-A glossary of useful terms related to the OpenMalaria wiki can be found [http://code.google.com/p/openmalaria/wiki/Terminology here].
+A glossary of useful terms related to the !OpenMalaria wiki can be found [http://code.google.com/p/openmalaria/wiki/Terminology here].
 
 
-==1.	Download OpenMalaria==
+==1.	Download !OpenMalaria==
 
-The model is written in C++. In order to run the model you need to download the simulator that contains all the necessary code in an executable version. This is updated from time to time.  For instance, as of April 2011 the current version of the OpenMalaria schema was version 26.  Check back periodically to ensure you have the most up to date version. If you are in doubt contact the OpenMalaria administrator. To run the OpenMalaria simulator you need to create an XML file that contains all the data on malaria in your study area (described in later steps).
+The model is written in C++. In order to run the model you need to download the simulator that contains all the necessary code in an executable version. This is updated from time to time.  For instance, as of April 2011 the current version of the !OpenMalaria schema was version 26.  Check back periodically to ensure you have the most up to date version. If you are in doubt contact the !OpenMalaria administrator. To run the !OpenMalaria simulator you need to create an XML file that contains all the data on malaria in your study area (described in later steps).
 
-A description of how to download OpenMalaria for a PC can be found 
-[http://code.google.com/p/openmalaria/wiki/openmalariaTools here].  Note: This interface to OpenMalaria is not available yet for Mac users –contact the administrator if you would like to run OpenMalaria on a Mac.
+A description of how to download !OpenMalaria for a PC can be found 
+[http://code.google.com/p/openmalaria/wiki/openmalariaTools here].  Note: This interface to !OpenMalaria is not available yet for Mac users –contact the administrator if you would like to run !OpenMalaria on a Mac.
 
 ==2.	Decide on what you will be simulating==
 
 Before doing anything else, collaborate with the research team and/or control program managers in the study area (if possible) to ensure field data is available for what you want to simulate. For example, if the field study is a cohort where people are tested for malaria using rapid diagnostic tests (RDTs), you will be simulating patent infections. If the field study is an entomological study where mosquitoes are trapped, dissected and analyzed for sporozoites, you will be simulating number of infectious mosquitoes. 
 
-The full list of outputs OpenMalaria is able to simulate can be found 
+The full list of outputs !OpenMalaria is able to simulate can be found 
 [http://code.google.com/p/openmalaria/wiki/XmlMonitoring here].  Try to keep the number of outputs limited to 3 or 4 maximum for ease of analysis. The models are driven by the simulated Entomological Inoculation Rate (EIR), which is the main measure of transmission so this should ideally be one of the outputs if you are interested in simulating the effects of interventions on transmission. 
 
 It is important for this step to happen early on because you don’t want to get to the end of running simulations and find out your analysis is not relevant in the field. It will help immensely if everyone is on the same page at the beginning with what you are simulating and why.
@@ -70,7 +70,7 @@ A description of the XML syntax required for the scenario files can be found
 
 ==5.	Gather data ==
 
-The next step is to gather the necessary data to include in the scenario file to describe the situation in your study area as closely as possible to reality. There are more or less 90 separate pieces of data that need to go into the model. As many inputs as possible should come from studies in your particular study area, but realistically the overall percentage of inputs that come from site-specific data will be rather modest (about 30%). A sizeable number of inputs will come from previously published literature at the district, national or regional level through a literature review. There will be a number of inputs that will remain the same as the initial model parameterization (1-2)(4-7) depending on which model(s) you choose, particularly data on the vector life cycle and drug action. It is helpful to document the source of the data you choose for each parameter and if there are multiple sources why you chose the value that will go into the model.
+The next step is to gather the necessary data to include in the scenario file to describe the situation in your study area as closely as possible to reality. There are more or less 90 separate pieces of data that need to go into the model. As many inputs as possible should come from studies in your particular study area, but realistically the overall percentage of inputs that come from site-specific data will be rather modest (about 30%). A sizeable number of inputs will come from previously published literature at the district, national or regional level through a literature review. There will be a number of inputs that will remain the same as the initial model parameterization^1-2, 4-7^ depending on which model(s) you choose, particularly data on the vector life cycle and drug action. It is helpful to document the source of the data you choose for each parameter and if there are multiple sources why you chose the value that will go into the model.
 
 
 ==6.	Create XML scenario file==
@@ -95,7 +95,7 @@ Creating graphs that overlay observed field data onto the simulations will give 
 
 ==9.	Conduct experiments – evaluate uncertainty with a sensitivity analysis and examining a mix of intervention options==
 
-By running simulations with multiple seed values you are addressing stochasticity of the model. However, once you have your fitted model, conducting a sensitivity analysis of parameters can address parameter uncertainty. Choose parameters that you believe are important to the model but have input values you are not completely certain about. For example, measures of EIR can vary in the same location when different methods for measuring sporozoites and biting rate are applied (3), so this parameter is a good candidate for a sensitivity analysis.  Choose a range of values for the parameter that makes sense given your study area context – usually a minimum, maximum and median value.  Using the EIR example, if your estimated EIR for the study area is 4, for your range you may want to choose 0.4 as a lower value, 10 as a slightly higher value, and 40 and an extremely high value. Using the scenario file of the “best fit” model from your simulations above, only change the value you are conducting the sensitivity analysis with and create as many new scenario files as you have values (i.e. one file for the minimum EIR, one for the maximum EIR, etc). 
+By running simulations with multiple seed values you are addressing stochasticity of the model. However, once you have your fitted model, conducting a sensitivity analysis of parameters can address parameter uncertainty. Choose parameters that you believe are important to the model but have input values you are not completely certain about. For example, measures of EIR can vary in the same location when different methods for measuring sporozoites and biting rate are applied^3^, so this parameter is a good candidate for a sensitivity analysis.  Choose a range of values for the parameter that makes sense given your study area context – usually a minimum, maximum and median value.  Using the EIR example, if your estimated EIR for the study area is 4, for your range you may want to choose 0.4 as a lower value, 10 as a slightly higher value, and 40 and an extremely high value. Using the scenario file of the “best fit” model from your simulations above, only change the value you are conducting the sensitivity analysis with and create as many new scenario files as you have values (i.e. one file for the minimum EIR, one for the maximum EIR, etc). 
 
 To explore the effects of different interventions, take your “best fit” model and update the scenario file to simulate different coverage levels, timing, and target age groups. Set the scenario to run for an extended period time over the whole population of the study area to see the impact. 
 
@@ -104,7 +104,7 @@ To explore the effects of different interventions, take your “best fit” mode
 
 Once you are satisfied that the syntax in your scenario files is working and you are ready to run the simulations with all seed values and parameterizations in the chosen population, you may conclude that your simulations will take too long on your own computer.
 
-Collaborators of the OpenMalaria development team can send the scenario files in .xml format to the project staff who will ensure the scenario file is in order and then submit them to an appropriate computing resource. If you have gone through the setup and analysis exercises on  smaller simulated populations this part should run smoothly.
+Collaborators of the !OpenMalaria development team can send the scenario files in .xml format to the project staff who will ensure the scenario file is in order and then submit them to an appropriate computing resource. If you have gone through the setup and analysis exercises on  smaller simulated populations this part should run smoothly.
 
 
 ==References==
