Edited wiki page SetupOverview through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1786 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/SetupOverview.wiki
+++ b/wiki/SetupOverview.wiki
@@ -1,5 +1,9 @@
 #summary Overview of building and installation methods
 
+= Overview of how to use OpenMalaria for simulating a field site =
+
+  * [Instructions simulating field sites]
+
 = Installing =
 
 Interested in the openmalaria project? Assuming you want to do more than join the volunteer computing effort (at [http://www.malariacontrol.net]), you have the following options:
