--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -14,6 +14,7 @@
       * [ScenarioTransmission Transmission model]
         * [XmlEntoVector Vector-transmission]
       * [ModelInterventions Interventions]
+    * [ExperimentDesign Experiments]
     * [OutputFiles Output formats]
     * Tools
       * [UtilsWindows Useful utilities on Windows]
