--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -118,6 +118,6 @@ The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single value
 || 49 || Clinical_DrugUsageIV || drug ID || 24 || Quantities of intravenous drugs used, per active ingredient abbreviation (mg) ||
 || 50 || nAddedToCohort || age group || n || Number of individuals added to cohort ||
 || 51 || nRemovedFromCohort || age group || n || Number of individuals removed from cohort ||
-|| 52 || nMDAs || age group || y || Number of drug doses given via mass deployment (MDA or screen&treat) (where configured as screen&treat, etc., this only reports treatments actually prescribed) ||
+|| 52 || nMDAs || age group || y || Number of drug doses given via mass deployment (MDA or screen&treat) (where configured as screen&treat, etc., this only reports treatments actually prescribed). As of schema 26, this output only reports anything on a 1-day time-step; in the future it will also work on a 5-day timestep. ||
 || 53 || nNmfDeaths || age group || y || Direct deaths due to non-malaria fevers ||
 || 54 || nAntibioticTreatments || age group || y || Report number of antibiotic treatments administered ||
