Replaced references to chitnis function with smooth-compact
git-svn-id: https://openmalaria.googlecode.com/svn@1847 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelDecayFunctions.wiki
+++ b/wiki/ModelDecayFunctions.wiki
@@ -14,12 +14,12 @@ added into schema version 25. The following set of functions are available:
 || exponential || `exp( - t/L * log(2) )` || ||
 || weibull     || `exp( -(t/L)^k * log(2) )` || equivalent to exponential when `k = 1` ||
 || hill        || `1 / (1 + (t/L)^k)` || ||
-|| chitnis     || `exp( k - k / (1 - (t/L)^2) )` || for `t < L`, otherwise 0 ||
+|| smooth-compact || `exp( k - k / (1 - (t/L)^2) )` || for `t < L`, otherwise 0 ||
 
 where `L` is some description of the time-scale (dimension time) and `k` is a shape
 parameter (no dimension).
 
-Chitnis's function and the linear decay reach zero at time L, whereas the
+The smooth compact and linear decay functions reach zero at time L, whereas the
 Weibull, Hill and exponential functions never reach zero and have half their
 original efficacies at time L.
 
